# llmgrad

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
llmgrad/: __init__.py  nn.py  optim.py
src/: bindings.cpp  tensor.cpp  tensor.hpp
