[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmgrad"
version = "0.0.1"
description = "A C++ AI engine with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "user447-ui", email = "secretmail294@gmail.com"}]
